# feast-aws

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  Untitled Diagram.drawio  dev-docker-compose.yml  docker-compose.yml  pyproject.toml  setup.cfg  task-definition.json
.github/workflows/: build-compose.yml  code-quality.yml  infrastructure.yml  prod-server-cicd.yml  pull-request.yml  server-cd.yml  server-ci.yml  server-cicd.yml  task-definition.json  ui-cd.yml  ui-ci.yml
client/: feature_store.yaml  test_fetch.py
docs/: Untitled Diagram.drawio
driver_stats/feature_repo/data/: driver_stats.parquet
infrastructure/aws/: main.tf
infrastructure/aws/environments/dev/: README.md  main.tf  outputs.tf  variables.tf
infrastructure/aws/environments/prod/: main.tf
infrastructure/aws/modules/backend/: .terraform.lock.hcl  main.tf  variables.tf
infrastructure/aws/modules/s3/: main.tf  (+2 more)
infrastructure/playbooks/: ec2.yml  nginx.yml
repository/: README.md  data_sources.py  entities.py  feature_services.py  feature_store.yaml  features.py  test_workflow.py
repository/common/: entities.py  sources.py
repository/driver_stats/: services.py  transformations.py  views.py
scheduler/: README.md
server/: Dockerfile  README.md  __main__.py  application.py  config.py  logger.py  models.py  utils.py
server/api/: router.py
server/api/endpoints/: features.py  hello.py  materialize.py  projects.py  registry.py
server/aws/: client.py  constants.py  utils.py
server/core/: application.py  config.py  logger.py
snowflake/: README.md  main.tf  variables.tf
snowflake/modules/database/: grants.tf  main.tf
snowflake/modules/service-account/: main.tf
snowflake/modules/warehouse/: main.tf
tests/: test_workflow.py
ui/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  project-list.json
ui/src/: index.js
(+17 files in other folders)
