[tool.poetry]
name = "feast-aws"
version = "0.1.0"
description = ""
authors = ["Jordan Hoare <jordan@pleiadesperspectives.com.au>"]
readme = "README.md"
packages = [{include = "feast_aws"}]

[tool.poetry.dependencies]
python = "^3.10"
feast = {extras = ["aws"], version = "^0.34.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
